--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<img id="face-source-3" src="face4.png" alt=" " class="face-source">
 	<img id="face-source-4" src="face5.png" alt=" " class="face-source">
 
-	<h1>MATT</h1>
+	<h1>DAMIEN</h1>
 
 	<div id="faces-container">
 
